# hotel-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  render.yaml  taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.tasks/: setup.yml
authentication/: logic.py  urls.py  views.py
dashboard/: views.py
emailservices/: apps.py  urls.py  views.py
emailservices/templates/: EarlyCancelModal.html  Error.html  Thankyou.html  index.html  send_email.html
get_started/: apps.py  tests.py  urls.py  views.py
get_started/templates/: login.html
helper/: tests.py
home/: tests.py  views.py
hotel_management/: asgi.py  settings.py  urls.py  wsgi.py
hotel_management/templates/: base.html
login/: urls.py  views.py
login/templates/: login.html
reservation/: admin.py  logic.py  models.py  tests.py  url.py  urls.py  views.py
reservation/migrations/: 0001_initial.py  0002_remove_reservation_checked_out_and_more.py  0002_rename_date_reservation_booked_on_and_more.py  0003_alter_reservation_checked_out_at_and_more.py  0003_remove_room_is_available.py
reservation/templates/: history.html  new.html  view.html
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_room_booked_from_room_booked_to.py  0003_remove_room_booked_from_remove_room_booked_to.py
signup/: urls.py  views.py
signup/templates/: register.html
static/css/: base.css
templates/: base.html
templates/partials/: footer.html  messages.html  navbar.html
user/: admin.py  models.py  tests.py  views.py
user/migrations/: 0001_initial.py
user/templates/: update.html  view.html
user_profile/: urls.py  views.py
user_profile/templates/: update.html  view.html
users/: admin.py  apps.py  models.py
(+16 files in other folders)
